--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,15 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.MuiStepLabel-label{
+  color: white;
+}
+
+.MuiStepLabel-label.Mui-active.css-1hv8oq8-MuiStepLabel-label{
+  color: white;
+}
+
+.MuiStepLabel-label.Mui-completed.css-1hv8oq8-MuiStepLabel-label{
+  color: grey;
+}
